test/input/invalid/export.js
{
    export var V = 1;
}
